--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
 encoding//app/bower_components/angular/angular.js=UTF-8
+encoding//app/global-translations/locale-en.json=UTF-8
+encoding//app/global-translations/locale-mk.json=UTF-8
