--- a/bower.json
+++ b/bower.json
@@ -5,9 +5,10 @@
     "lib"
   ],
   "dependencies": {
-    "angular": "1.0.7",
-    "angular-resource": "1.0.7",
-    "angular-mocks": "1.0.7",
+    "angular": "1.2.18",
+    "angular-resource": "1.2.18",
+    "angular-route": "1.2.18",
+    "angular-mocks": "1.2.18",
     "angular-bootstrap": "0.6.0",
     "angular-webstorage": "0.9.3",
     "blockui": "2.55.0-2013.01.23",
@@ -20,18 +21,21 @@
     "underscore": "1.5.1",
     "angular-translate": "1.0.2",
     "angular-translate-loader-static-files": "0.1.4",
-    "d3": "3.3.3",
-    "nvd3": "1.1.10-beta",
-    "angularjs-file-upload": "0.1.4",
+    "d3": "3.3.9",
+    "nvd3": "1.1.14-beta",
+    "angularjs-file-upload": "1.1.5",
     "angular-sanitize": "v1.0.8",
     "bootstrap-timepicker":"0.2.6",
     "ckeditor": "",
+    "ng-idle":"",
+    "q":"v1.0.1",
     "crypto-js": "http://crypto-js.googlecode.com/files/CryptoJS%20v3.1.2.zip"
   },
   "devDependencies": {
     "jasmine": "1.3.1"
   },
   "resolutions": {
-    "angular": "1.0.7"
+    "angular": "1.2.18",
+    "d3":"3.3.9"
   }
 }
